# CImage

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CImage.cpp  main.cpp
src/includes/: CImage.h
